--- a/pagina3.html
+++ b/pagina3.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Pagina 3.</h1>
     <hr>
+    <h2>Subtitulo numero 3</h2>
+    <hr>
     <p>Esta es la tercera pagina del diseño.</p>
     <a href="index.html">Regresar a la pagina de inicio.</a>
 </body>
