--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <body> 
     <h1>Esto es un titulo.</h1>
     <h2>Esto es un subtitulo.</h2>
-    <p>el deportivo independiente medellin pierde despues de un vergonzoso partido.
-        Arregui se hizo expulsar como un niño.
+    <p>Aqui es donde se agrega un parrafo para entrar y copiar cualquier cosa.
     </p>
     <a href="pagina2.html">Ir a otra pagina</a>
     <a href="pagina3.html">Ir a segunda pagina</a>
