--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
 </head>
 <body> 
-    <h1>Esto es un titulo.</h1>
-    <h2>Esto es un subtitulo.</h2>
+    <h1>Esto es un titulo.</h1><hr>
+    <h2>Esto es un subtitulo.</h2><br>
     <p>Aqui es donde se agrega un parrafo para entrar y copiar cualquier cosa...
-    </p>
+    </p><hr>
     <a href="pagina2.html">Ir a otra pagina</a>
     <a href="pagina3.html">Ir a segunda pagina</a>
 </body>
