--- a/pagina3.html
+++ b/pagina3.html
@@ -7,11 +7,30 @@
     <title>Pagina 3</title>
 </head>
 <body>
-    <h1>Pagina 3.</h1>
-    <hr>
-    <h2>Subtitulo numero 3</h2>
-    <hr>
+    <h1>Pagina 3.</h1><hr>
+    <h2>Subtitulo numero 3</h2><hr>
     <p>Esta es la tercera pagina del diseño.</p>
-    <a href="index.html">Regresar a la pagina de inicio.</a>
+    <p>Construire una lista acontinuacion.</p>
+    <ol start="1">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ol><br>
+    <p>Creando una lista desordenada.</p>
+    <ul>
+        <il>Elemento 1</il>
+        <il>Elemento 2</il>
+        <il>Elemento 3</il>
+        <il>Elemento 4</il>
+        <il>Elemento 5</il>
+    </ul>
+    <br>
+    <footer>
+        <nav>
+            <a href="index.html">Regresar a la pagina de inicio.</a>
+        </nav>
+    </footer>
 </body>
 </html>
