--- a/pagina3.html
+++ b/pagina3.html
@@ -27,6 +27,7 @@
         <il>Elemento 5</il>
     </ul>
     <br>
+    <img src="https://res.cloudinary.com/diqp92rza/image/upload/v1630732447/Multimedia/earth-1756274_1920_yklshe.jpg">
     <footer>
         <nav>
             <a href="index.html">Regresar a la pagina de inicio.</a>
