--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <h2>Esto es un subtitulo.</h2><br>
     <p>Aqui es donde se agrega un parrafo para entrar y copiar cualquier cosa...
     </p><hr>
+    <audio controls>
+        <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732495/Multimedia/cinematic-chillhop-main-6676_u0nolw.wav">
+        <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732449/Multimedia/cinematic-chillhop-main-6676_xrecj0.mp3">
+        <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732448/Multimedia/cinematic-chillhop-main-6676_gamgpr.ogg">
+    </audio>
     <a href="pagina2.html">Ir a otra pagina</a>
     <a href="pagina3.html">Ir a segunda pagina</a>
+    <video width "100%" controls> 
+        <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732450/Multimedia/Eye_-_79545_nsj07c.mp4">
+        <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732453/Multimedia/Eye-79545_tevudy.webm">
+        <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732446/Multimedia/Eye-79545_qjqiew.mov">
+    </video>
 </body>
 </html>
