--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <html>
 <head>
+    <!--Aqui va el titulo de la pagina-->
     <title>Hola Mundo</title>
     <meta charset="utf-8">
 </head>
 <body> 
+    <!--aqui van los encabezados-->
     <h1>Esto es un titulo.</h1><hr>
     <h2>Esto es un subtitulo.</h2><br>
+    <!--Aqui va un parrafo-->
     <p>Aqui es donde se agrega un parrafo para entrar y copiar cualquier cosa...
     </p><hr>
+    <!--Aqui se agrega un audio.-->
     <audio controls>
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732495/Multimedia/cinematic-chillhop-main-6676_u0nolw.wav">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732449/Multimedia/cinematic-chillhop-main-6676_xrecj0.mp3">
@@ -15,6 +19,7 @@
     </audio>
     <a href="pagina2.html">Ir a otra pagina</a>
     <a href="pagina3.html">Ir a segunda pagina</a>
+    <!--Aqui se agrega un video.-->
     <video width "100%" controls> 
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732450/Multimedia/Eye_-_79545_nsj07c.mp4">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732453/Multimedia/Eye-79545_tevudy.webm">
