--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <!--En la parte de head pondremos todo lo que no se puede ver en la pagina.-->
 <head>
     <!--Aqui va el titulo de la pagina-->
     <title>Hola Mundo</title>
@@ -6,21 +7,32 @@
 </head>
 <body> 
     <!--aqui van los encabezados-->
-    <h1>Esto es un titulo.</h1><hr>
-    <h2>Esto es un subtitulo.</h2><br>
+    <h1>Esto es un titulo.</h1><hr><!--Este titulo se suele poner una vez-->
+    <h2>Esto es un titulo h2</h2><br><!--Este titulo se suele poner varias veces pero sin exagerar-->
+    <h3>Titulo h3.</h3><!--Este titulo se suele poner veces ilimitadas como h4, h5, h6-->
+    <h4>Titulo h4.</h4>
+    <h5>Titulo h5.</h5>
+    <h6>Titulo h6.</h6>
     <!--Aqui va un parrafo-->
-    <p>Aqui es donde se agrega un parrafo para entrar y copiar cualquier cosa...
-    </p><hr>
+    <p>Aqui es donde se agrega un parrafo para entrar y copiar cualquier cosa...</p><hr><br>
+    <i>esta etiqueta se usa para ladear la letra</i><br><!--Se usa para ladear la letra en modo italica-->
+    <strike>Se usa para tachar las palabras frases ETC.</strike><br><!--Sirve para tachar lo que escribimos-->
+    <small>Se usa para usar la letra chiquita</small><br><!--Esta etiqueta se usa para poner la letra mas pequeña-->
+    <b>Se usa para hacer la letra en negrita</b><br><!--Esta se usa para poner la letra en negrita-->
     <!--Aqui se agrega un audio.-->
     <audio controls>
+        <!--Se usa para subir el mismo archivo en diferentes formatos para diferentes navegadores-->
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732495/Multimedia/cinematic-chillhop-main-6676_u0nolw.wav">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732449/Multimedia/cinematic-chillhop-main-6676_xrecj0.mp3">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732448/Multimedia/cinematic-chillhop-main-6676_gamgpr.ogg">
-    </audio>
-    <a href="pagina2.html">Ir a otra pagina</a>
-    <a href="pagina3.html">Ir a segunda pagina</a>
+    </audio><br>
+    <a href="pagina2.html">Ir a otra pagina</a><br>
+    <a href="pagina3.html">Ir a segunda pagina</a><br>
+    <a href="cosas/Pagina4.html">Ir a pagina 4</a><br><!--Acceder a una pagina puesta dentro de una carpeta-->
+    <a href="https://www.youtube.com" target="_BLANK">Acceder a YouTube</a><!--Forma de agregar un link externo ademas con (target="_BLANK") lo abriremos en otra ventana.-->
     <!--Aqui se agrega un video.-->
     <video width "100%" controls> 
+        <!--Se usa para subir el mismo archivo en diferentes formatos para diferentes navegadores-->
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732450/Multimedia/Eye_-_79545_nsj07c.mp4">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732453/Multimedia/Eye-79545_tevudy.webm">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732446/Multimedia/Eye-79545_qjqiew.mov">
