--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732450/Multimedia/Eye_-_79545_nsj07c.mp4">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732453/Multimedia/Eye-79545_tevudy.webm">
         <source src="https://res.cloudinary.com/diqp92rza/video/upload/v1630732446/Multimedia/Eye-79545_qjqiew.mov">
-    </video><br>
-    <button>boton</button>
+    </video>
 </body>
 </html>
