--- a/pagina2.html
+++ b/pagina2.html
@@ -7,10 +7,10 @@
     <title>Distrtiendas de Nariño</title>
 </head>
 <body>
+    <a href="index.html">Regresar</a>
     <h1>Distritiendas de nariño es la es la mejor distribuidora del departamento de nariño.</h1>
     <p>Contamos con el nuevo logo de la empresa a continuacion.</p>
     <hr>
-    <img src="imgs/logo_distritiendas.jpg" alt=""/> <br>
-    <a href="index.html">Regresar</a>
+    <img src="imgs/logo_distritiendas.jpg" alt=""/> <br><br><br><br><br><br><br>
 </body>
 </html>
