--- a/cosas/Pagina4.html
+++ b/cosas/Pagina4.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 4</title>
-</head>
+    <meta name="keywords" content="huevo, masa, comida, estado"><!--se usa para agregar etiquetas de buscado en el metadata y ceo de la pagina-->
+    <meta name="description" content="HTML es un lenguaje de programacion para estructurar paginas web"><!--se usa para agregar una descripcion de la pagina-->
+    <link rel="icon" href="../imgs/logo del canal oficial.ico"><!--forma de ir a otra carpeta para añadir una imagen-->
+</head>  
 <body>
     <h1>Pagina 4</h1>
     <a href="../index.html">Volver a la pagina principal</a><br><!--ir a paginas que estan en la carpeta de atras-->
@@ -15,7 +18,7 @@
         <input type="reset" value="Formatear formulario"><br><br><!--Se usa para resetear un formulario-->
         <input type="hidden"><!--Se pone para que se introduzca infromacion oculta-->
         <label for="">Nombre</label><!--sirve para poner una label.-->
-            <input type="text"><br><br><!--Sirve para poner una caja de texto.-->
+            <input type="text" required=""><br><br><!--Sirve para poner una caja de texto (required) sirve para que sea obligatorio llenar el campo--> 
         <!--Otra forma de hacer la caja de texto-->
         <label for"apellido">Apellido<!--Aqui estamos usando dentro de la etiqueta label un input-->
             <input id="apellido" maxlength="5" placeholder="Apellido" type="text"><!--podremos colocar un (placeholder) para añadir dentro de la caja de texto un mensaje y un (maxlenght) para añadir un limite de caracteres a usar-->
