--- a/pagina2.html
+++ b/pagina2.html
@@ -5,12 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distrtiendas de Nariño</title>
+    <link rel="icon" href="imgs/logo del canal oficial.ico">
 </head>
 <body>
     <a href="index.html">Regresar</a>
     <h1>Distritiendas de nariño es la es la mejor distribuidora del departamento de nariño.</h1>
     <p>Contamos con el nuevo logo de la empresa a continuacion.</p>
     <hr>
-    <img src="imgs/logo_distritiendas.jpg" alt=""/> <br><br><br><br><br><br><br>
+    <center>
+        <img src="imgs/logo_distritiendas.jpg" width="400px" alt="Logo_distritiendas" title="Logo de distritiendas"/><!--El (alt) sirve para ponerle un nombre que ayuda en el ceo y el (title) sirve para ponerle titulo a la imagen-->
+    </center>
+    <table><!--Creacion de una tabla-->
+        <tr><!--Creacion de las filas-->
+            <td>Distribuidor</td><!--elemento de la fila-->
+            <td>Empleado</td>
+            <td>Cliente</td>
+            <td>Tienda</td>
+        </tr>
+        <tr><!--Otra fila-->
+            <td>Alpinetazo</td>
+            <td>Mario Tunjo</td>
+            <td>Roman josjean</td>
+            <td>Capetansia</td>
+        </tr>
+    </table>
+    
+    <br><br><br><br><br><br><br>
 </body>
 </html>
