--- a/pagina3.html
+++ b/pagina3.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 3</title>
+    <link rel="icon" href="imgs/logo del canal oficial.ico">
 </head>
 <body>
+    <a href="#PiePagina">Ir al final de la pagina.</a><!--ir a una seccion de la pagina-->
     <h1>Pagina 3.</h1><hr>
     <h2>Subtitulo numero 3</h2><hr>
     <p>Esta es la tercera pagina del diseño.</p>
@@ -27,10 +29,11 @@
         <il>Elemento 5</il>
     </ul>
     <br>
-    <img src="https://res.cloudinary.com/diqp92rza/image/upload/v1630732447/Multimedia/earth-1756274_1920_yklshe.jpg">
+    <img src="https://res.cloudinary.com/diqp92rza/image/upload/v1630732447/Multimedia/earth-1756274_1920_yklshe.jpg" width="700px">
     <footer>
         <nav>
             <a href="index.html">Regresar a la pagina de inicio.</a>
+            <h2 id="PiePagina">Parte baja</h2><!--seccion de la pagina encontrada -->
         </nav>
     </footer>
 </body>
